# spatial-indexing

./: .gitignore  CMakeLists.txt  README.md  RTree.cpp  RTree.h  main.cpp  test.cpp
kd-tree/: kd-tree.hpp  p1.txt  test.cpp
quad-tree/: p1.txt  quad-tree.hpp  test.cpp
utils/: point.hpp  rect.hpp
utils/headers/: rect.hpp  shpreader.h
utils/src/: geohash.c  geohash.cpp  shpformat.cpp  shpreader.cpp
